--- a/chunk_includes/TaskInstructionsAdv.html
+++ b/chunk_includes/TaskInstructionsAdv.html
@@ -96,7 +96,7 @@ To me, this sentence sounds:
 Note that there is no right and no wrong answer. Simply choose the answer that you prefer.
  <br>
   <br>
- <b>To get paid for your participation, you will need to continue to the very end of the experiment.</b> </font></p>   <!--PROLIFIC--> 
+ <b>To receive credit for your participation, you will need to continue to the very end of the experiment.</b> </font></p>   <!--PROLIFIC--> 
  <!-- <b>To receive credit for your participation, you will need to continue to the very end of the experiment.</b> </font></p>  --> <!--SONA--> 
 <br>
 <br>
